cmake_minimum_required(VERSION 3.10)
project(sorting_algorithms)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add executable
add_executable(sorting_analysis 
    src/main.cpp
    src/sorting.cpp
)

# Include directories
target_include_directories(sorting_analysis PRIVATE ${CMAKE_SOURCE_DIR}/src)